working PDP pipeline, indexing, ipni
