# market/mk20/types.go
@@ -22,7 +22,7 @@ type Deal struct {
 	Client address.Address `json:"client"`
 
 	// Data represents the source of piece data and associated metadata.
-	Data *DataSource `json:"data"`
+	Data *DataSource `json:"data,omitempty"`
 
 	// Products represents a collection of product-specific information associated with a deal
 	Products Products `json:"products"`
@@ -30,13 +30,13 @@ type Deal struct {
 
 type Products struct {
 	// DDOV1 represents a product v1 configuration for Direct Data Onboarding (DDO)
-	DDOV1 *DDOV1 `json:"ddo_v1"`
+	DDOV1 *DDOV1 `json:"ddo_v1,omitempty"`
 
 	// RetrievalV1 represents configuration for retrieval settings in the system, including indexing and announcement flags.
-	RetrievalV1 *RetrievalV1 `json:"retrieval_v1"`
+	RetrievalV1 *RetrievalV1 `json:"retrieval_v1,omitempty"`
 
 	// PDPV1 represents product-specific configuration for PDP version 1 deals.
-	PDPV1 *PDPV1 `json:"pdp_v1"`
+	PDPV1 *PDPV1 `json:"pdp_v1,omitempty"`
 }
 
 // DataSource represents the source of piece data, including metadata and optional methods to fetch or describe the data origin.
@@ -49,16 +49,16 @@ type DataSource struct {
 	Format PieceDataFormat `json:"format"`
 
 	// SourceHTTP represents the HTTP-based source of piece data within a deal, including raw size and URLs for retrieval.
-	SourceHTTP *DataSourceHTTP `json:"source_http"`
+	SourceHTTP *DataSourceHTTP `json:"source_http,omitempty"`
 
 	// SourceAggregate represents an aggregated source, comprising multiple data sources as pieces.
-	SourceAggregate *DataSourceAggregate `json:"source_aggregate"`
+	SourceAggregate *DataSourceAggregate `json:"source_aggregate,omitempty"`
 
 	// SourceOffline defines the data source for offline pieces, including raw size information.
-	SourceOffline *DataSourceOffline `json:"source_offline"`
+	SourceOffline *DataSourceOffline `json:"source_offline,omitempty"`
 
 	// SourceHTTPPut // allow clients to push piece data after deal accepted, sort of like offline import
-	SourceHttpPut *DataSourceHttpPut `json:"source_httpput"`
+	SourceHttpPut *DataSourceHttpPut `json:"source_httpput,omitempty"`
 
 	// SourceStorageProvider -> sp IDs/ipni, pieceCids
 }
@@ -67,13 +67,13 @@ type DataSource struct {
 type PieceDataFormat struct {
 
 	// Car represents the optional CAR file format, including its metadata and versioning details.
-	Car *FormatCar `json:"car"`
+	Car *FormatCar `json:"car,omitempty"`
 
 	// Aggregate holds a reference to the aggregated format of piece data.
-	Aggregate *FormatAggregate `json:"aggregate"`
+	Aggregate *FormatAggregate `json:"aggregate,omitempty"`
 
 	// Raw represents the raw format of the piece data, encapsulated as bytes.
-	Raw *FormatBytes `json:"raw"`
+	Raw *FormatBytes `json:"raw,omitempty"`
 }
 
 // FormatCar represents the CAR (Content Addressable archive) format for piece data serialization.
